[gd_scene load_steps=10 format=2]

[ext_resource path="res://characters/wizard/grav_bar2.png" type="Texture" id=1]
[ext_resource path="res://characters/wizard/WizardPlayerInfo.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]
[ext_resource path="res://characters/wizard/sprites/geyser_charge.png" type="Texture" id=4]
[ext_resource path="res://characters/wizard/sprites/spark_speed.png" type="Texture" id=5]
[ext_resource path="res://characters/wizard/grav_bar3.png" type="Texture" id=6]
[ext_resource path="res://characters/wizard/grav_bar5.png" type="Texture" id=7]
[ext_resource path="res://characters/wizard/sprites/flamewave_charge.png" type="Texture" id=8]
[ext_resource path="res://characters/wizard/sprites/flamewave_charge_empty.png" type="Texture" id=9]

[node name="PlayerInfo" type="MarginContainer"]
anchor_right = 0.498
anchor_bottom = 0.111
margin_right = -189.72
margin_bottom = -21.96
rect_min_size = Vector2( 0, 18 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource( 3 )
custom_constants/margin_right = 23
custom_constants/margin_left = 23
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 23.0
margin_right = 106.0
margin_bottom = 18.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 83.0
margin_bottom = 18.0

[node name="HoverBar" type="TextureProgress" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 83.0
margin_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.001
value = 1.0
texture_under = ExtResource( 7 )
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 6 )

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer/HoverBar"]
margin_right = 83.0
margin_bottom = 10.0

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HoverBar/Control"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.5
margin_top = -3.0
margin_right = 20.5
margin_bottom = 15.0
custom_constants/separation = -4
alignment = 2

[node name="1" type="TextureRect" parent="HBoxContainer/VBoxContainer/HoverBar/Control/HBoxContainer2"]
unique_name_in_owner = true
margin_right = 16.0
margin_bottom = 18.0
texture = ExtResource( 4 )

[node name="2" type="TextureRect" parent="HBoxContainer/VBoxContainer/HoverBar/Control/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 12.0
margin_right = 28.0
margin_bottom = 18.0
texture = ExtResource( 4 )

[node name="3" type="TextureRect" parent="HBoxContainer/VBoxContainer/HoverBar/Control/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 24.0
margin_right = 40.0
margin_bottom = 18.0
texture = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HoverBar/Control"]
unique_name_in_owner = true
margin_left = -2.0
margin_top = 3.0
margin_right = 86.0
margin_bottom = 19.0
alignment = 2

[node name="SparkSpeed" type="TextureRect" parent="HBoxContainer/VBoxContainer/HoverBar/Control/HBoxContainer"]
unique_name_in_owner = true
margin_left = 72.0
margin_right = 88.0
margin_bottom = 16.0
texture = ExtResource( 5 )

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HoverBar/Control"]
unique_name_in_owner = true
margin_left = 10.0
margin_top = 3.0
margin_right = 74.0
margin_bottom = 40.0
alignment = 2

[node name="FlameCharge" type="TextureProgress" parent="HBoxContainer/VBoxContainer/HoverBar/Control/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 48.0
margin_right = 64.0
margin_bottom = 16.0
size_flags_vertical = 0
rounded = true
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 8 )
fill_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HoverBar"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.5
margin_top = -10.5
margin_right = 43.5
margin_bottom = 7.5
text = "gravity"
